// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create subscription fields when mutations are disabled 1`] = `
"type Query {
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
}

\\"\\"\\"@model\\"\\"\\"
type Note {
  id: ID!
  title: String
}

type NoteResultList {
  items: [Note!]!
  offset: Int
  limit: Int
  count: Int
}

input NoteFilter {
  id: IDInput
  title: StringInput
  and: [NoteFilter!]
  or: [NoteFilter!]
  not: NoteFilter
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID!]
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String!]
  contains: String
  startsWith: String
  endsWith: String
}

input PageRequest {
  limit: Int
  offset: Int
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

enum SortDirectionEnum {
  DESC
  ASC
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
}

input NoteSubscriptionFilter {
  and: [NoteSubscriptionFilter!]
  or: [NoteSubscriptionFilter!]
  not: NoteSubscriptionFilter
  id: IDInput
  title: StringInput
}
"
`;

exports[`Creates CRUD resolvers for models 1`] = `
Object {
  "Comment": Object {
    "noteComment": [Function],
  },
  "Fix": Object {
    "issues": [Function],
  },
  "GraphbackDate": "GraphbackDate",
  "GraphbackJSON": "GraphbackJSON",
  "GraphbackTimestamp": "GraphbackTimestamp",
  "Issue": Object {
    "bugFix": [Function],
  },
  "Mutation": Object {
    "createComment": [Function],
    "createFix": [Function],
    "createIssue": [Function],
    "createModelWithArrayScalar": [Function],
    "createModelWithTransientField": [Function],
    "createNote": [Function],
    "createTest": [Function],
    "createVersioned": [Function],
    "deleteComment": [Function],
    "deleteModelWithArrayScalar": [Function],
    "deleteModelWithTransientField": [Function],
    "deleteNote": [Function],
    "deleteTest": [Function],
    "updateComment": [Function],
    "updateModelWithArrayScalar": [Function],
    "updateModelWithTransientField": [Function],
    "updateNote": [Function],
    "updateTest": [Function],
    "updateVersioned": [Function],
  },
  "Note": Object {
    "comments": [Function],
    "test": [Function],
  },
  "Query": Object {
    "findComments": [Function],
    "findModelWithArrayScalars": [Function],
    "findModelWithTransientFields": [Function],
    "findNotes": [Function],
    "findTests": [Function],
    "findVersioneds": [Function],
    "getComment": [Function],
    "getModelWithArrayScalar": [Function],
    "getModelWithTransientField": [Function],
    "getNote": [Function],
    "getTest": [Function],
  },
  "Subscription": Object {
    "deletedComment": Object {
      "subscribe": [Function],
    },
    "deletedModelWithArrayScalar": Object {
      "subscribe": [Function],
    },
    "deletedModelWithTransientField": Object {
      "subscribe": [Function],
    },
    "deletedNote": Object {
      "subscribe": [Function],
    },
    "deletedTest": Object {
      "subscribe": [Function],
    },
    "newComment": Object {
      "subscribe": [Function],
    },
    "newModelWithArrayScalar": Object {
      "subscribe": [Function],
    },
    "newModelWithTransientField": Object {
      "subscribe": [Function],
    },
    "newNote": Object {
      "subscribe": [Function],
    },
    "newTest": Object {
      "subscribe": [Function],
    },
    "updatedComment": Object {
      "subscribe": [Function],
    },
    "updatedModelWithArrayScalar": Object {
      "subscribe": [Function],
    },
    "updatedModelWithTransientField": Object {
      "subscribe": [Function],
    },
    "updatedNote": Object {
      "subscribe": [Function],
    },
    "updatedTest": Object {
      "subscribe": [Function],
    },
  },
}
`;

exports[`Test one side relationship schema query type generation 1`] = `
"type Query {
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany(field: 'note', key: 'test_id')\\"\\"\\"
  tests(filter: TestFilter): [Test]!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String

  \\"\\"\\"@manyToOne(field: 'tests', key: 'test_id')\\"\\"\\"
  note: Note
}

input TestFilter {
  id: IDInput
  name: StringInput
  test_id: IDInput
  and: [TestFilter!]
  or: [TestFilter!]
  not: TestFilter
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID!]
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String!]
  contains: String
  startsWith: String
  endsWith: String
}

type NoteResultList {
  items: [Note!]!
  offset: Int
  limit: Int
  count: Int
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [NoteFilter!]
  or: [NoteFilter!]
  not: NoteFilter
}

input PageRequest {
  limit: Int
  offset: Int
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

enum SortDirectionEnum {
  DESC
  ASC
}

type TestResultList {
  items: [Test!]!
  offset: Int
  limit: Int
  count: Int
}
"
`;

exports[`Test snapshot config gql 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE | OBJECT

\\"\\"\\"
Test case for https://github.com/aerogear/graphback/issues/1462.
Added to verify that https://github.com/aerogear/graphback/pull/1840 fixes the issue.
\\"\\"\\"
directive @read(roles: [AUTH_ROLE!]!) on FIELD_DEFINITION

\\"\\"\\"Exposes a URL that specifies the behaviour of this scalar.\\"\\"\\"
directive @specifiedBy(
  \\"\\"\\"The URL that specifies the behaviour of this scalar.\\"\\"\\"
  url: String!
) on SCALAR

enum AUTH_ROLE {
  ANONYMOUS
  PRIVATE
}

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  createdAt: GraphbackDate @read(roles: [ANONYMOUS])
  title: String!
  description: String!

  \\"\\"\\"@manyToOne(field: 'comments', key: 'note_id')\\"\\"\\"
  noteComment: Note!
}

input CommentFilter {
  id: IDInput
  createdAt: GraphbackDateInput
  title: StringInput
  description: StringInput
  note_id: IDInput
  and: [CommentFilter!]
  or: [CommentFilter!]
  not: CommentFilter
}

type CommentResultList {
  items: [Comment!]!
  offset: Int
  limit: Int
  count: Int
}

input CommentSubscriptionFilter {
  and: [CommentSubscriptionFilter!]
  or: [CommentSubscriptionFilter!]
  not: CommentSubscriptionFilter
  id: IDInput
  createdAt: GraphbackDateInput
  title: StringInput
  description: StringInput
}

input CreateCommentInput {
  createdAt: GraphbackDate
  title: String!
  description: String!
  note_id: ID!
}

input CreateCustomTypeInput {
  issue1432: String
}

input CreateFixInput

input CreateIssueInput {
  category: IssueCategory
  createdAt: DateTime
  custom: CreateCustomTypeInput
  bugFixId: ID
}

input CreateModelWithArrayScalarInput {
  roles: [String!]!
}

input CreateModelWithTransientFieldInput {
  name: String
}

input CreateNoteInput {
  title: String!
  description: String!
  test_id: ID
}

input CreateTestInput {
  name: String
  metadata: GraphbackJSON
}

input CreateVersionedInput {
  name: String
}

type CustomType @test(description: \\"Directive added following a fix for https://github.com/aerogear/graphback/issues/1767\\") {
  issue1432: String
}

scalar DateTime

input DateTimeInput {
  ne: DateTime
  eq: DateTime
  le: DateTime
  lt: DateTime
  ge: DateTime
  gt: DateTime
  in: [DateTime!]
  between: [DateTime!]
}

\\"\\"\\"
A model added as part of fixing https://github.com/aerogear/graphback/issues/1452, disable some crud operations to decreate noises.
@model(
  find: false,
  findOne: false,
  create: true,
  update: false,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
\\"\\"\\"
type Fix {
  id: ID!

  \\"\\"\\"
  @oneToMany(field: 'bugFix', key: 'bugFixId')
  Added as part of fixing https://github.com/aerogear/graphback/issues/1452 showing that even if filtering is disabled on a model level,
  we should have filter type created as it can be used on the relationship level without throwing an error.
  @oneToMany(field: 'bugFix')
  \\"\\"\\"
  issues(filter: IssueFilter): [Issue]
}

scalar GraphbackDate

input GraphbackDateInput {
  ne: GraphbackDate
  eq: GraphbackDate
  le: GraphbackDate
  lt: GraphbackDate
  ge: GraphbackDate
  gt: GraphbackDate
  in: [GraphbackDate!]
  between: [GraphbackDate!]
}

scalar GraphbackJSON

\\"\\"\\"
The javascript \`Date\` as integer. Type represents date and time as number of milliseconds from start of UNIX epoch.
\\"\\"\\"
scalar GraphbackTimestamp

input GraphbackTimestampInput {
  ne: GraphbackTimestamp
  eq: GraphbackTimestamp
  le: GraphbackTimestamp
  lt: GraphbackTimestamp
  ge: GraphbackTimestamp
  gt: GraphbackTimestamp
  in: [GraphbackTimestamp!]
  between: [GraphbackTimestamp!]
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID!]
}

\\"\\"\\"
Model added to test schema generation using enum.
See issue https://github.com/aerogear/graphback/issues/1299

@model(
  find: false,
  findOne: false,
  create: true,
  update: false,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
\\"\\"\\"
type Issue {
  id: ID!
  category: IssueCategory
  createdAt: DateTime

  \\"\\"\\"
  Field with custom type added as a fix for https://github.com/aerogear/graphback/issues/1432
  This shows that a custom type can be added without breaking Graphback schema generation
  \\"\\"\\"
  custom: CustomType

  \\"\\"\\"@manyToOne(field: 'issues', key: 'bugFixId')\\"\\"\\"
  bugFix: Fix
}

enum IssueCategory {
  BUG
  QUESTION
  FEATURE_REQUEST
}

input IssueFilter {
  id: IDInput
  category: StringInput
  createdAt: DateTimeInput
  bugFixId: IDInput
  and: [IssueFilter!]
  or: [IssueFilter!]
  not: IssueFilter
}

\\"\\"\\"@model\\"\\"\\"
type ModelWithArrayScalar {
  id: ID!
  roles: [String!]!
}

input ModelWithArrayScalarFilter {
  id: IDInput
  roles: StringInput
  and: [ModelWithArrayScalarFilter!]
  or: [ModelWithArrayScalarFilter!]
  not: ModelWithArrayScalarFilter
}

type ModelWithArrayScalarResultList {
  items: [ModelWithArrayScalar!]!
  offset: Int
  limit: Int
  count: Int
}

input ModelWithArrayScalarSubscriptionFilter {
  and: [ModelWithArrayScalarSubscriptionFilter!]
  or: [ModelWithArrayScalarSubscriptionFilter!]
  not: ModelWithArrayScalarSubscriptionFilter
  id: IDInput
  roles: StringInput
}

\\"\\"\\"@model\\"\\"\\"
type ModelWithTransientField {
  id: ID!
  name: String

  \\"\\"\\"@transient\\"\\"\\"
  generatedFullName: String
}

input ModelWithTransientFieldFilter {
  id: IDInput
  name: StringInput
  and: [ModelWithTransientFieldFilter!]
  or: [ModelWithTransientFieldFilter!]
  not: ModelWithTransientFieldFilter
}

type ModelWithTransientFieldResultList {
  items: [ModelWithTransientField!]!
  offset: Int
  limit: Int
  count: Int
}

input ModelWithTransientFieldSubscriptionFilter {
  and: [ModelWithTransientFieldSubscriptionFilter!]
  or: [ModelWithTransientFieldSubscriptionFilter!]
  not: ModelWithTransientFieldSubscriptionFilter
  id: IDInput
  name: StringInput
}

input MutateCommentInput {
  id: ID!
  createdAt: GraphbackDate
  title: String
  description: String
  note_id: ID
}

input MutateModelWithArrayScalarInput {
  id: ID!
  roles: [String]
}

input MutateModelWithTransientFieldInput {
  id: ID!
  name: String
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

input MutateTestInput {
  id: ID!
  name: String
  metadata: GraphbackJSON
}

input MutateVersionedInput {
  id: ID!
  name: String
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: CreateNoteInput!): Note
  updateNote(input: MutateNoteInput!): Note
  deleteNote(input: MutateNoteInput!): Note
  createTest(input: CreateTestInput!): Test
  updateTest(input: MutateTestInput!): Test
  deleteTest(input: MutateTestInput!): Test
  createComment(input: CreateCommentInput!): Comment
  updateComment(input: MutateCommentInput!): Comment
  deleteComment(input: MutateCommentInput!): Comment
  createIssue(input: CreateIssueInput!): Issue
  createFix(input: CreateFixInput!): Fix
  createVersioned(input: CreateVersionedInput!): Versioned
  updateVersioned(input: MutateVersionedInput!): Versioned
  createModelWithTransientField(input: CreateModelWithTransientFieldInput!): ModelWithTransientField
  updateModelWithTransientField(input: MutateModelWithTransientFieldInput!): ModelWithTransientField
  deleteModelWithTransientField(input: MutateModelWithTransientFieldInput!): ModelWithTransientField
  createModelWithArrayScalar(input: CreateModelWithArrayScalarInput!): ModelWithArrayScalar
  updateModelWithArrayScalar(input: MutateModelWithArrayScalarInput!): ModelWithArrayScalar
  deleteModelWithArrayScalar(input: MutateModelWithArrayScalarInput!): ModelWithArrayScalar
}

\\"\\"\\" @model \\"\\"\\"
type Note @test(description: \\" Directive added following a fix for https://github.com/aerogear/graphback/issues/1767\\") {
  id: ID!
  title: String! @test(description: \\"mock directive\\")
  description: String!

  \\"\\"\\"@oneToMany(field: 'noteComment', key: 'note_id')\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne(key: 'test_id')\\"\\"\\"
  test: Test
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  test_id: IDInput
  and: [NoteFilter!]
  or: [NoteFilter!]
  not: NoteFilter
}

type NoteResultList {
  items: [Note!]!
  offset: Int
  limit: Int
  count: Int
}

input NoteSubscriptionFilter {
  and: [NoteSubscriptionFilter!]
  or: [NoteSubscriptionFilter!]
  not: NoteSubscriptionFilter
  id: IDInput
  title: StringInput
  description: StringInput
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  findVersioneds(filter: VersionedFilter, page: PageRequest, orderBy: OrderByInput): VersionedResultList!
  getModelWithTransientField(id: ID!): ModelWithTransientField
  findModelWithTransientFields(filter: ModelWithTransientFieldFilter, page: PageRequest, orderBy: OrderByInput): ModelWithTransientFieldResultList!
  getModelWithArrayScalar(id: ID!): ModelWithArrayScalar
  findModelWithArrayScalars(filter: ModelWithArrayScalarFilter, page: PageRequest, orderBy: OrderByInput): ModelWithArrayScalarResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String!]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  updatedModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  deletedModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  newModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
  updatedModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
  deletedModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
  metadata: GraphbackJSON
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter!]
  or: [TestFilter!]
  not: TestFilter
}

type TestResultList {
  items: [Test!]!
  offset: Int
  limit: Int
  count: Int
}

input TestSubscriptionFilter {
  and: [TestSubscriptionFilter!]
  or: [TestSubscriptionFilter!]
  not: TestSubscriptionFilter
  id: IDInput
  name: StringInput
}

\\"\\"\\"
@model(
  find: true,
  findOne: false,
  create: true,
  update: true,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
@versioned
Test case for https://github.com/aerogear/graphback/issues/1349
\\"\\"\\"
type Versioned {
  id: ID!
  name: String

  \\"\\"\\"@createdAt\\"\\"\\"
  createdAt: GraphbackTimestamp

  \\"\\"\\"@updatedAt\\"\\"\\"
  updatedAt: GraphbackTimestamp
}

input VersionedFilter {
  id: IDInput
  name: StringInput
  and: [VersionedFilter!]
  or: [VersionedFilter!]
  not: VersionedFilter
  createdAt: GraphbackTimestampInput
  updatedAt: GraphbackTimestampInput
}

type VersionedResultList {
  items: [Versioned!]!
  offset: Int
  limit: Int
  count: Int
}"
`;

exports[`Test snapshot config js 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE | OBJECT

\\"\\"\\"
Test case for https://github.com/aerogear/graphback/issues/1462.
Added to verify that https://github.com/aerogear/graphback/pull/1840 fixes the issue.
\\"\\"\\"
directive @read(roles: [AUTH_ROLE!]!) on FIELD_DEFINITION

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  findVersioneds(filter: VersionedFilter, page: PageRequest, orderBy: OrderByInput): VersionedResultList!
  getModelWithTransientField(id: ID!): ModelWithTransientField
  findModelWithTransientFields(filter: ModelWithTransientFieldFilter, page: PageRequest, orderBy: OrderByInput): ModelWithTransientFieldResultList!
  getModelWithArrayScalar(id: ID!): ModelWithArrayScalar
  findModelWithArrayScalars(filter: ModelWithArrayScalarFilter, page: PageRequest, orderBy: OrderByInput): ModelWithArrayScalarResultList!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany(field: 'noteComment', key: 'note_id')\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne(key: 'test_id')\\"\\"\\"
  test: Test
}

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  createdAt: GraphbackDate
  title: String!
  description: String!

  \\"\\"\\"@manyToOne(field: 'comments', key: 'note_id')\\"\\"\\"
  noteComment: Note!
}

scalar GraphbackDate

input CommentFilter {
  id: IDInput
  createdAt: GraphbackDateInput
  title: StringInput
  description: StringInput
  note_id: IDInput
  and: [CommentFilter!]
  or: [CommentFilter!]
  not: CommentFilter
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID!]
}

input GraphbackDateInput {
  ne: GraphbackDate
  eq: GraphbackDate
  le: GraphbackDate
  lt: GraphbackDate
  ge: GraphbackDate
  gt: GraphbackDate
  in: [GraphbackDate!]
  between: [GraphbackDate!]
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String!]
  contains: String
  startsWith: String
  endsWith: String
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
  metadata: GraphbackJSON
}

scalar GraphbackJSON

type NoteResultList {
  items: [Note!]!
  offset: Int
  limit: Int
  count: Int
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  test_id: IDInput
  and: [NoteFilter!]
  or: [NoteFilter!]
  not: NoteFilter
}

input PageRequest {
  limit: Int
  offset: Int
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

enum SortDirectionEnum {
  DESC
  ASC
}

type TestResultList {
  items: [Test!]!
  offset: Int
  limit: Int
  count: Int
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter!]
  or: [TestFilter!]
  not: TestFilter
}

type CommentResultList {
  items: [Comment!]!
  offset: Int
  limit: Int
  count: Int
}

type VersionedResultList {
  items: [Versioned!]!
  offset: Int
  limit: Int
  count: Int
}

\\"\\"\\"
@model(
  find: true,
  findOne: false,
  create: true,
  update: true,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
@versioned
Test case for https://github.com/aerogear/graphback/issues/1349
\\"\\"\\"
type Versioned {
  id: ID!
  name: String

  \\"\\"\\"@createdAt\\"\\"\\"
  createdAt: GraphbackTimestamp

  \\"\\"\\"@updatedAt\\"\\"\\"
  updatedAt: GraphbackTimestamp
}

\\"\\"\\"
The javascript \`Date\` as integer. Type represents date and time as number of milliseconds from start of UNIX epoch.
\\"\\"\\"
scalar GraphbackTimestamp

input VersionedFilter {
  id: IDInput
  name: StringInput
  and: [VersionedFilter!]
  or: [VersionedFilter!]
  not: VersionedFilter
  createdAt: GraphbackTimestampInput
  updatedAt: GraphbackTimestampInput
}

input GraphbackTimestampInput {
  ne: GraphbackTimestamp
  eq: GraphbackTimestamp
  le: GraphbackTimestamp
  lt: GraphbackTimestamp
  ge: GraphbackTimestamp
  gt: GraphbackTimestamp
  in: [GraphbackTimestamp!]
  between: [GraphbackTimestamp!]
}

\\"\\"\\"@model\\"\\"\\"
type ModelWithTransientField {
  id: ID!
  name: String

  \\"\\"\\"@transient\\"\\"\\"
  generatedFullName: String
}

type ModelWithTransientFieldResultList {
  items: [ModelWithTransientField!]!
  offset: Int
  limit: Int
  count: Int
}

input ModelWithTransientFieldFilter {
  id: IDInput
  name: StringInput
  and: [ModelWithTransientFieldFilter!]
  or: [ModelWithTransientFieldFilter!]
  not: ModelWithTransientFieldFilter
}

\\"\\"\\"@model\\"\\"\\"
type ModelWithArrayScalar {
  id: ID!
  roles: [String!]!
}

type ModelWithArrayScalarResultList {
  items: [ModelWithArrayScalar!]!
  offset: Int
  limit: Int
  count: Int
}

input ModelWithArrayScalarFilter {
  id: IDInput
  roles: StringInput
  and: [ModelWithArrayScalarFilter!]
  or: [ModelWithArrayScalarFilter!]
  not: ModelWithArrayScalarFilter
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: CreateNoteInput!): Note
  updateNote(input: MutateNoteInput!): Note
  deleteNote(input: MutateNoteInput!): Note
  createTest(input: CreateTestInput!): Test
  updateTest(input: MutateTestInput!): Test
  deleteTest(input: MutateTestInput!): Test
  createComment(input: CreateCommentInput!): Comment
  updateComment(input: MutateCommentInput!): Comment
  deleteComment(input: MutateCommentInput!): Comment
  createIssue(input: CreateIssueInput!): Issue
  createFix(input: CreateFixInput!): Fix
  createVersioned(input: CreateVersionedInput!): Versioned
  updateVersioned(input: MutateVersionedInput!): Versioned
  createModelWithTransientField(input: CreateModelWithTransientFieldInput!): ModelWithTransientField
  updateModelWithTransientField(input: MutateModelWithTransientFieldInput!): ModelWithTransientField
  deleteModelWithTransientField(input: MutateModelWithTransientFieldInput!): ModelWithTransientField
  createModelWithArrayScalar(input: CreateModelWithArrayScalarInput!): ModelWithArrayScalar
  updateModelWithArrayScalar(input: MutateModelWithArrayScalarInput!): ModelWithArrayScalar
  deleteModelWithArrayScalar(input: MutateModelWithArrayScalarInput!): ModelWithArrayScalar
}

input CreateNoteInput {
  title: String!
  description: String!
  test_id: ID
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

input CreateTestInput {
  name: String
  metadata: GraphbackJSON
}

input MutateTestInput {
  id: ID!
  name: String
  metadata: GraphbackJSON
}

input CreateCommentInput {
  createdAt: GraphbackDate
  title: String!
  description: String!
  note_id: ID!
}

input MutateCommentInput {
  id: ID!
  createdAt: GraphbackDate
  title: String
  description: String
  note_id: ID
}

\\"\\"\\"
Model added to test schema generation using enum.
See issue https://github.com/aerogear/graphback/issues/1299

@model(
  find: false,
  findOne: false,
  create: true,
  update: false,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
\\"\\"\\"
type Issue {
  id: ID!
  category: IssueCategory
  createdAt: DateTime

  \\"\\"\\"
  Field with custom type added as a fix for https://github.com/aerogear/graphback/issues/1432
  This shows that a custom type can be added without breaking Graphback schema generation
  \\"\\"\\"
  custom: CustomType

  \\"\\"\\"@manyToOne(field: 'issues', key: 'bugFixId')\\"\\"\\"
  bugFix: Fix
}

enum IssueCategory {
  BUG
  QUESTION
  FEATURE_REQUEST
}

scalar DateTime

type CustomType {
  issue1432: String
}

\\"\\"\\"
A model added as part of fixing https://github.com/aerogear/graphback/issues/1452, disable some crud operations to decreate noises.
@model(
  find: false,
  findOne: false,
  create: true,
  update: false,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
\\"\\"\\"
type Fix {
  id: ID!

  \\"\\"\\"
  @oneToMany(field: 'bugFix', key: 'bugFixId')
  Added as part of fixing https://github.com/aerogear/graphback/issues/1452 showing that even if filtering is disabled on a model level,
  we should have filter type created as it can be used on the relationship level without throwing an error.
  @oneToMany(field: 'bugFix')
  \\"\\"\\"
  issues(filter: IssueFilter): [Issue]
}

input IssueFilter {
  id: IDInput
  category: StringInput
  createdAt: DateTimeInput
  bugFixId: IDInput
  and: [IssueFilter!]
  or: [IssueFilter!]
  not: IssueFilter
}

input DateTimeInput {
  ne: DateTime
  eq: DateTime
  le: DateTime
  lt: DateTime
  ge: DateTime
  gt: DateTime
  in: [DateTime!]
  between: [DateTime!]
}

input CreateIssueInput {
  category: IssueCategory
  createdAt: DateTime
  custom: CreateCustomTypeInput
  bugFixId: ID
}

input CreateCustomTypeInput {
  issue1432: String
}

input CreateFixInput

input CreateVersionedInput {
  name: String
}

input MutateVersionedInput {
  id: ID!
  name: String
}

input CreateModelWithTransientFieldInput {
  name: String
}

input MutateModelWithTransientFieldInput {
  id: ID!
  name: String
}

input CreateModelWithArrayScalarInput {
  roles: [String!]!
}

input MutateModelWithArrayScalarInput {
  id: ID!
  roles: [String]
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  updatedModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  deletedModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  newModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
  updatedModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
  deletedModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
}

input NoteSubscriptionFilter {
  and: [NoteSubscriptionFilter!]
  or: [NoteSubscriptionFilter!]
  not: NoteSubscriptionFilter
  id: IDInput
  title: StringInput
  description: StringInput
}

input TestSubscriptionFilter {
  and: [TestSubscriptionFilter!]
  or: [TestSubscriptionFilter!]
  not: TestSubscriptionFilter
  id: IDInput
  name: StringInput
}

input CommentSubscriptionFilter {
  and: [CommentSubscriptionFilter!]
  or: [CommentSubscriptionFilter!]
  not: CommentSubscriptionFilter
  id: IDInput
  createdAt: GraphbackDateInput
  title: StringInput
  description: StringInput
}

input ModelWithTransientFieldSubscriptionFilter {
  and: [ModelWithTransientFieldSubscriptionFilter!]
  or: [ModelWithTransientFieldSubscriptionFilter!]
  not: ModelWithTransientFieldSubscriptionFilter
  id: IDInput
  name: StringInput
}

input ModelWithArrayScalarSubscriptionFilter {
  and: [ModelWithArrayScalarSubscriptionFilter!]
  or: [ModelWithArrayScalarSubscriptionFilter!]
  not: ModelWithArrayScalarSubscriptionFilter
  id: IDInput
  roles: StringInput
}

enum AUTH_ROLE {
  ANONYMOUS
  PRIVATE
}
"
`;

exports[`Test snapshot config ts 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE | OBJECT

\\"\\"\\"
Test case for https://github.com/aerogear/graphback/issues/1462.
Added to verify that https://github.com/aerogear/graphback/pull/1840 fixes the issue.
\\"\\"\\"
directive @read(roles: [AUTH_ROLE!]!) on FIELD_DEFINITION

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  findVersioneds(filter: VersionedFilter, page: PageRequest, orderBy: OrderByInput): VersionedResultList!
  getModelWithTransientField(id: ID!): ModelWithTransientField
  findModelWithTransientFields(filter: ModelWithTransientFieldFilter, page: PageRequest, orderBy: OrderByInput): ModelWithTransientFieldResultList!
  getModelWithArrayScalar(id: ID!): ModelWithArrayScalar
  findModelWithArrayScalars(filter: ModelWithArrayScalarFilter, page: PageRequest, orderBy: OrderByInput): ModelWithArrayScalarResultList!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany(field: 'noteComment', key: 'note_id')\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne(key: 'test_id')\\"\\"\\"
  test: Test
}

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  createdAt: GraphbackDate
  title: String!
  description: String!

  \\"\\"\\"@manyToOne(field: 'comments', key: 'note_id')\\"\\"\\"
  noteComment: Note!
}

scalar GraphbackDate

input CommentFilter {
  id: IDInput
  createdAt: GraphbackDateInput
  title: StringInput
  description: StringInput
  note_id: IDInput
  and: [CommentFilter!]
  or: [CommentFilter!]
  not: CommentFilter
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID!]
}

input GraphbackDateInput {
  ne: GraphbackDate
  eq: GraphbackDate
  le: GraphbackDate
  lt: GraphbackDate
  ge: GraphbackDate
  gt: GraphbackDate
  in: [GraphbackDate!]
  between: [GraphbackDate!]
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String!]
  contains: String
  startsWith: String
  endsWith: String
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
  metadata: GraphbackJSON
}

scalar GraphbackJSON

type NoteResultList {
  items: [Note!]!
  offset: Int
  limit: Int
  count: Int
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  test_id: IDInput
  and: [NoteFilter!]
  or: [NoteFilter!]
  not: NoteFilter
}

input PageRequest {
  limit: Int
  offset: Int
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

enum SortDirectionEnum {
  DESC
  ASC
}

type TestResultList {
  items: [Test!]!
  offset: Int
  limit: Int
  count: Int
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter!]
  or: [TestFilter!]
  not: TestFilter
}

type CommentResultList {
  items: [Comment!]!
  offset: Int
  limit: Int
  count: Int
}

type VersionedResultList {
  items: [Versioned!]!
  offset: Int
  limit: Int
  count: Int
}

\\"\\"\\"
@model(
  find: true,
  findOne: false,
  create: true,
  update: true,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
@versioned
Test case for https://github.com/aerogear/graphback/issues/1349
\\"\\"\\"
type Versioned {
  id: ID!
  name: String

  \\"\\"\\"@createdAt\\"\\"\\"
  createdAt: GraphbackTimestamp

  \\"\\"\\"@updatedAt\\"\\"\\"
  updatedAt: GraphbackTimestamp
}

\\"\\"\\"
The javascript \`Date\` as integer. Type represents date and time as number of milliseconds from start of UNIX epoch.
\\"\\"\\"
scalar GraphbackTimestamp

input VersionedFilter {
  id: IDInput
  name: StringInput
  and: [VersionedFilter!]
  or: [VersionedFilter!]
  not: VersionedFilter
  createdAt: GraphbackTimestampInput
  updatedAt: GraphbackTimestampInput
}

input GraphbackTimestampInput {
  ne: GraphbackTimestamp
  eq: GraphbackTimestamp
  le: GraphbackTimestamp
  lt: GraphbackTimestamp
  ge: GraphbackTimestamp
  gt: GraphbackTimestamp
  in: [GraphbackTimestamp!]
  between: [GraphbackTimestamp!]
}

\\"\\"\\"@model\\"\\"\\"
type ModelWithTransientField {
  id: ID!
  name: String

  \\"\\"\\"@transient\\"\\"\\"
  generatedFullName: String
}

type ModelWithTransientFieldResultList {
  items: [ModelWithTransientField!]!
  offset: Int
  limit: Int
  count: Int
}

input ModelWithTransientFieldFilter {
  id: IDInput
  name: StringInput
  and: [ModelWithTransientFieldFilter!]
  or: [ModelWithTransientFieldFilter!]
  not: ModelWithTransientFieldFilter
}

\\"\\"\\"@model\\"\\"\\"
type ModelWithArrayScalar {
  id: ID!
  roles: [String!]!
}

type ModelWithArrayScalarResultList {
  items: [ModelWithArrayScalar!]!
  offset: Int
  limit: Int
  count: Int
}

input ModelWithArrayScalarFilter {
  id: IDInput
  roles: StringInput
  and: [ModelWithArrayScalarFilter!]
  or: [ModelWithArrayScalarFilter!]
  not: ModelWithArrayScalarFilter
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: CreateNoteInput!): Note
  updateNote(input: MutateNoteInput!): Note
  deleteNote(input: MutateNoteInput!): Note
  createTest(input: CreateTestInput!): Test
  updateTest(input: MutateTestInput!): Test
  deleteTest(input: MutateTestInput!): Test
  createComment(input: CreateCommentInput!): Comment
  updateComment(input: MutateCommentInput!): Comment
  deleteComment(input: MutateCommentInput!): Comment
  createIssue(input: CreateIssueInput!): Issue
  createFix(input: CreateFixInput!): Fix
  createVersioned(input: CreateVersionedInput!): Versioned
  updateVersioned(input: MutateVersionedInput!): Versioned
  createModelWithTransientField(input: CreateModelWithTransientFieldInput!): ModelWithTransientField
  updateModelWithTransientField(input: MutateModelWithTransientFieldInput!): ModelWithTransientField
  deleteModelWithTransientField(input: MutateModelWithTransientFieldInput!): ModelWithTransientField
  createModelWithArrayScalar(input: CreateModelWithArrayScalarInput!): ModelWithArrayScalar
  updateModelWithArrayScalar(input: MutateModelWithArrayScalarInput!): ModelWithArrayScalar
  deleteModelWithArrayScalar(input: MutateModelWithArrayScalarInput!): ModelWithArrayScalar
}

input CreateNoteInput {
  title: String!
  description: String!
  test_id: ID
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

input CreateTestInput {
  name: String
  metadata: GraphbackJSON
}

input MutateTestInput {
  id: ID!
  name: String
  metadata: GraphbackJSON
}

input CreateCommentInput {
  createdAt: GraphbackDate
  title: String!
  description: String!
  note_id: ID!
}

input MutateCommentInput {
  id: ID!
  createdAt: GraphbackDate
  title: String
  description: String
  note_id: ID
}

\\"\\"\\"
Model added to test schema generation using enum.
See issue https://github.com/aerogear/graphback/issues/1299

@model(
  find: false,
  findOne: false,
  create: true,
  update: false,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
\\"\\"\\"
type Issue {
  id: ID!
  category: IssueCategory
  createdAt: DateTime

  \\"\\"\\"
  Field with custom type added as a fix for https://github.com/aerogear/graphback/issues/1432
  This shows that a custom type can be added without breaking Graphback schema generation
  \\"\\"\\"
  custom: CustomType

  \\"\\"\\"@manyToOne(field: 'issues', key: 'bugFixId')\\"\\"\\"
  bugFix: Fix
}

enum IssueCategory {
  BUG
  QUESTION
  FEATURE_REQUEST
}

scalar DateTime

type CustomType {
  issue1432: String
}

\\"\\"\\"
A model added as part of fixing https://github.com/aerogear/graphback/issues/1452, disable some crud operations to decreate noises.
@model(
  find: false,
  findOne: false,
  create: true,
  update: false,
  delete: false,
  subCreate: false,
  subUpdate: false,
  subDelete: false
)
\\"\\"\\"
type Fix {
  id: ID!

  \\"\\"\\"
  @oneToMany(field: 'bugFix', key: 'bugFixId')
  Added as part of fixing https://github.com/aerogear/graphback/issues/1452 showing that even if filtering is disabled on a model level,
  we should have filter type created as it can be used on the relationship level without throwing an error.
  @oneToMany(field: 'bugFix')
  \\"\\"\\"
  issues(filter: IssueFilter): [Issue]
}

input IssueFilter {
  id: IDInput
  category: StringInput
  createdAt: DateTimeInput
  bugFixId: IDInput
  and: [IssueFilter!]
  or: [IssueFilter!]
  not: IssueFilter
}

input DateTimeInput {
  ne: DateTime
  eq: DateTime
  le: DateTime
  lt: DateTime
  ge: DateTime
  gt: DateTime
  in: [DateTime!]
  between: [DateTime!]
}

input CreateIssueInput {
  category: IssueCategory
  createdAt: DateTime
  custom: CreateCustomTypeInput
  bugFixId: ID
}

input CreateCustomTypeInput {
  issue1432: String
}

input CreateFixInput

input CreateVersionedInput {
  name: String
}

input MutateVersionedInput {
  id: ID!
  name: String
}

input CreateModelWithTransientFieldInput {
  name: String
}

input MutateModelWithTransientFieldInput {
  id: ID!
  name: String
}

input CreateModelWithArrayScalarInput {
  roles: [String!]!
}

input MutateModelWithArrayScalarInput {
  id: ID!
  roles: [String]
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  updatedModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  deletedModelWithTransientField(filter: ModelWithTransientFieldSubscriptionFilter): ModelWithTransientField!
  newModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
  updatedModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
  deletedModelWithArrayScalar(filter: ModelWithArrayScalarSubscriptionFilter): ModelWithArrayScalar!
}

input NoteSubscriptionFilter {
  and: [NoteSubscriptionFilter!]
  or: [NoteSubscriptionFilter!]
  not: NoteSubscriptionFilter
  id: IDInput
  title: StringInput
  description: StringInput
}

input TestSubscriptionFilter {
  and: [TestSubscriptionFilter!]
  or: [TestSubscriptionFilter!]
  not: TestSubscriptionFilter
  id: IDInput
  name: StringInput
}

input CommentSubscriptionFilter {
  and: [CommentSubscriptionFilter!]
  or: [CommentSubscriptionFilter!]
  not: CommentSubscriptionFilter
  id: IDInput
  createdAt: GraphbackDateInput
  title: StringInput
  description: StringInput
}

input ModelWithTransientFieldSubscriptionFilter {
  and: [ModelWithTransientFieldSubscriptionFilter!]
  or: [ModelWithTransientFieldSubscriptionFilter!]
  not: ModelWithTransientFieldSubscriptionFilter
  id: IDInput
  name: StringInput
}

input ModelWithArrayScalarSubscriptionFilter {
  and: [ModelWithArrayScalarSubscriptionFilter!]
  or: [ModelWithArrayScalarSubscriptionFilter!]
  not: ModelWithArrayScalarSubscriptionFilter
  id: IDInput
  roles: StringInput
}

enum AUTH_ROLE {
  ANONYMOUS
  PRIVATE
}
"
`;

exports[`field directives on relationship fields are mapped to schema 1`] = `
"directive @test on FIELD_DEFINITION

\\"\\"\\"Exposes a URL that specifies the behaviour of this scalar.\\"\\"\\"
directive @specifiedBy(
  \\"\\"\\"The URL that specifies the behaviour of this scalar.\\"\\"\\"
  url: String!
) on SCALAR

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  text: String
  description: String

  \\"\\"\\"@manyToOne(field: 'comments', key: 'noteId')\\"\\"\\"
  note: Note! @test
}

input CommentFilter {
  id: IDInput
  text: StringInput
  description: StringInput
  noteId: IDInput
  and: [CommentFilter!]
  or: [CommentFilter!]
  not: CommentFilter
}

type CommentResultList {
  items: [Comment!]!
  offset: Int
  limit: Int
  count: Int
}

input CommentSubscriptionFilter {
  and: [CommentSubscriptionFilter!]
  or: [CommentSubscriptionFilter!]
  not: CommentSubscriptionFilter
  id: IDInput
  text: StringInput
  description: StringInput
}

input CreateCommentInput {
  text: String
  description: String
  noteId: ID!
}

input CreateNoteInput {
  title: String!
  description: String
  commentId: ID
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID!]
}

input MutateCommentInput {
  id: ID!
  text: String
  description: String
  noteId: ID
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  commentId: ID
}

type Mutation {
  createNote(input: CreateNoteInput!): Note
  updateNote(input: MutateNoteInput!): Note
  deleteNote(input: MutateNoteInput!): Note
  createComment(input: CreateCommentInput!): Comment
  updateComment(input: MutateCommentInput!): Comment
  deleteComment(input: MutateCommentInput!): Comment
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String

  \\"\\"\\"
  @oneToMany(field: 'note', key: 'noteId')
  @oneToMany(field: 'note')
  \\"\\"\\"
  comments(filter: CommentFilter): [Comment]! @test

  \\"\\"\\"
  @oneToOne(key: 'commentId')
  @oneToOne
  \\"\\"\\"
  comment: Comment @test
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  commentId: IDInput
  and: [NoteFilter!]
  or: [NoteFilter!]
  not: NoteFilter
}

type NoteResultList {
  items: [Note!]!
  offset: Int
  limit: Int
  count: Int
}

input NoteSubscriptionFilter {
  and: [NoteSubscriptionFilter!]
  or: [NoteSubscriptionFilter!]
  not: NoteSubscriptionFilter
  id: IDInput
  title: StringInput
  description: StringInput
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String!]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
}"
`;
